--- a/src/main/resources/templates/worker/profile.html
+++ b/src/main/resources/templates/worker/profile.html
@@ -25,25 +25,29 @@
                         <a class="nav-link" th:href="@{/}"><span th:text="#{nav.home}"></span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active scroll-top">
-                            <span class="sr-only">(current)</span>
-                            <span th:text="#{nav.profile}"></span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" th:href="@{/client}"><span th:text="#{nav.clients}"></span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/operations}"><span th:text="#{nav.actions}"></span></a>
                     </li>
                 </ul>
-                <div class="logout">
-                    <form class="form-inline my-2 my-lg-0" th:action="@{/worker/logOut}">
-                        <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">
-                            <i class="fas fa-sign-out-alt"></i>
-                            <span th:text="#{btn.logout}"></span>
-                        </button>
-                    </form>
+            </div>
+            <div class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span th:text="${worker.passport.firstName + ' ' + worker.passport.lastName}"
+                          th:unless="${worker} == null"></span>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" th:href="@{'/worker/' + ${worker.id}}">
+                        <i class="fas fa-user-circle"></i>
+                        <span th:text="#{nav.profile}"></span>
+                    </a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item text-danger" th:href="@{/worker/logOut}">
+                        <i class="fas fa-sign-out-alt"></i>
+                        <span th:text="#{btn.logout}"></span>
+                    </a>
                 </div>
             </div>
         </header>
