--- a/src/main/resources/templates/worker/profile.html
+++ b/src/main/resources/templates/worker/profile.html
@@ -32,7 +32,9 @@
                     </li>
                 </ul>
             </div>
-            <div class="nav-item dropdown">
+
+            <!--Worker profile-->
+            <div class="nav-item dropdown text-secondary">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span th:text="${worker.passport.firstName + ' ' + worker.passport.lastName}"
