--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,7 +48,7 @@
                 <div class="col-12">
                     <div class="rounded-container smooth-shadow">
                         <div class="title-container">
-                            <span><i class="avatar fas fa-coffee"></i></span>
+                            <i class="fas fa-university avatar"></i>
                             <h2 th:text="#{txt.card.greetings}"></h2>
                         </div>
                         <div class="rounded-container smooth-shadow">
